--- a/android/build.gradle
+++ b/android/build.gradle
@@ -15,6 +15,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'gradle.plugin.org.mozilla.rust-android-gradle:plugin:0.8.1'
         classpath 'com.apollographql.apollo:apollo-gradle-plugin:1.1.3'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
 
     }
 }
@@ -23,6 +24,9 @@ apply plugin: 'com.android.library'
 apply plugin: 'com.apollographql.android'
 apply plugin: 'kotlin-android'
 apply plugin: 'org.mozilla.rust-android-gradle.rust-android'
+apply plugin: 'com.github.dcendents.android-maven'
+
+group='com.github.sunrisechoir'
 
 android {
     compileSdkVersion 27
@@ -77,6 +81,7 @@ dependencies {
     implementation 'com.apollographql.apollo:apollo-runtime:1.1.3'
     compileOnly 'org.jetbrains:annotations:13.0'
     testCompileOnly 'org.jetbrains:annotations:13.0'
+
 
 }
 
