do we have a cc

--- a/jitpack.yml
+++ b/jitpack.yml
@@ -2,5 +2,5 @@
 before_install:
   - ./custom_setup.sh
 install:
-  - source $HOME/.cargo/env && cd android && ./gradlew tasks --all && ./gradlew build --debug 
+  - source $HOME/.cargo/env && cd android && ./gradlew tasks --all && ./gradlew build
 
