--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 [build-dependencies]
 
 [dependencies]
+# ssb-patchql-core = { git = "https://github.com/sunrise-choir/ssb-patchql", branch = "refactor-to-lib", features = ["go-ssb-log"]}
 ssb-patchql-core = { git = "https://github.com/sunrise-choir/ssb-patchql", branch = "refactor-to-lib" }
 # ssb-patchql-core = { path = "../../patchql/core"}
 
