--- a/android/build.gradle
+++ b/android/build.gradle
@@ -80,6 +80,8 @@ dependencies {
 //    implementation 'com.facebook.react:react-native:0.59.10'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'com.apollographql.apollo:apollo-runtime:1.1.3'
+    implementation 'com.beust:klaxon:5.0.1'
+    implementation 'com.beust:klaxon-jackson:1.0.1'
     compileOnly 'org.jetbrains:annotations:13.0'
     testCompileOnly 'org.jetbrains:annotations:13.0'
 }
