--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        kotlin_version = '1.3.40'
+        kotlin_version = '1.3.50'
         gradle_version = '3.5.0'
     }
 
@@ -16,7 +16,6 @@ buildscript {
         classpath 'gradle.plugin.org.mozilla.rust-android-gradle:plugin:0.8.1'
         classpath 'com.apollographql.apollo:apollo-gradle-plugin:1.1.3'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
-
     }
 }
 
@@ -29,12 +28,12 @@ apply plugin: 'com.github.dcendents.android-maven'
 group='com.github.sunrisechoir'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
     buildToolsVersion "28.0.3"
 
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 26
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
     }
@@ -79,8 +78,9 @@ repositories {
 dependencies {
 //    implementation 'com.facebook.react:react-native:0.59.10'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'com.apollographql.apollo:apollo-runtime:1.1.3'
-    implementation 'com.beust:klaxon:5.0.1'
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    api 'com.apollographql.apollo:apollo-runtime:1.1.3'
+    implementation 'com.beust:klaxon:5.0.4'
     implementation 'com.beust:klaxon-jackson:1.0.1'
     compileOnly 'org.jetbrains:annotations:13.0'
     testCompileOnly 'org.jetbrains:annotations:13.0'
