--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -7,12 +7,14 @@ description = ""
 keywords = [ "sunrisechoir", "patchql", "React Native" ]
 edition = "2018"
 
+[features]
+default = []
+ssb-go-log = ["ssb-patchql-core/ssb-go-log"]
+
 [build-dependencies]
 
 [dependencies]
-# ssb-patchql-core = { git = "https://github.com/sunrise-choir/ssb-patchql", branch = "refactor-to-lib", features = ["go-ssb-log"]}
-ssb-patchql-core = { git = "https://github.com/sunrise-choir/ssb-patchql", branch = "refactor-to-lib" }
-# ssb-patchql-core = { path = "../../patchql/core"}
+ssb-patchql-core = { git = "https://github.com/sunrise-choir/ssb-patchql", branch = "refactor-to-lib"}
 
 [target.'cfg(target_os="android")'.dependencies]
 jni = "0.12.3"
