--- a/android/build.gradle
+++ b/android/build.gradle
@@ -28,6 +28,11 @@ apply plugin: 'com.github.dcendents.android-maven'
 group='com.github.sunrisechoir'
 
 android {
+    signingConfigs {
+        release {
+
+        }
+    }
     compileSdkVersion 28
     buildToolsVersion "28.0.3"
 
@@ -57,8 +62,8 @@ cargo {
     profile = 'release'
     module = '../rust'
     libname = 'patchql'
-    //targets = ['arm', 'arm64', 'x86', 'x86_64']
-    targets = ['arm64', 'x86']
+    targets = ['arm', 'arm64', 'x86', 'x86_64']
+    //targets = ['arm64', 'x86']
     features {
         defaultAnd("ssb-go-log")
     }
