--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -2,7 +2,7 @@
 name = "rust_native_patchql"
 version = "0.1.0"
 authors = ["pietgeursen@gmail.com"]
-license = "AGPL-3.0"
+license = "LGPL-3.0"
 description = "android bindings for patchql"
 keywords = [ "sunrisechoir", "patchql", "mobile bindings" ]
 edition = "2018"
